[package]
name = "void-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Networking Gear
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "tokio", "kad"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# The 10/4 Resilience Math (Reed-Solomon)
reed-solomon-simd = "3.1"

# General Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
