[package]
name = "void-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pure Rust TCP Stack. Zero OS-dependent C-bindings.
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "tokio", "macros"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
reed-solomon-simd = "3.1"
